# consumer

./: Cargo.toml  LICENSE  azure-pipelines.yml  default.yml
.azure/: azure-pipelines.yml  install-rust.yml
src/: error.rs  lib.rs
src/client/: consumer.rs  hyper.rs  isahc.rs  mod.rs
tests/: common.rs  test_hyper.rs  test_isahc.rs
